# personal-finance-planner

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05bf89007c0b_add_sqlalchemybaseusertable_to_user_.py  11aeb0317d04_init_migration.py  4c66c1fb436e_delete_table_user_transaction_.py  52256804283c_add_column_is_active_to_user_model.py  778f5b7dbcaf_increase_user_password_field_length_to_.py  7bba49c89f69_init_migration.py  977bf6882b79_create_user_trasaction_association_table.py  a8f9385d07d3_init_migration.py  cbf850c86528_add_category_id_to_transaction.py  db9cca565714_add_category_id_to_goal.py  e1b2d7ec7005_add_category_id_to_budget_model.py  f397b412c48f_create_accesstoken_model.py
src/: main.py
src/api_v1/: __init__.py
src/auth/: backend.py  helpers.py  jwt_utils.py  transport.py  user_manager.py  validation.py
src/core/: __init__.py  config.py  db_helper.py
src/crud/: budget.py  category.py  goal.py  transaction.py  user.py
src/database/: __init__.py  config.py  db_helper.py  models.py
src/models/: __init__.py  access_token.py  budget.py  category.py  goal.py  transaction.py  user.py  user_transaction_association.py
src/schemas/: budget.py  category.py  goal.py  transaction.py  user.py
src/utils/: fake_data.py  hash_password.py  types.py
src/utils/dependencies/: budget_dependencies.py  category_dependencies.py  goal_dependencies.py  parse_timestamp.py  transaction_dependencies.py  (+1 more)
src/views/: __init__.py  auth.py  budget.py  category.py  fake_data.py  goal.py  transaction.py  user.py
(+21 files in other folders)
